--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -4658,7 +4658,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#si-exercise"
+    "#si-exercise\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "url = 'https://github.com/dustywhite7/pythonMikkeli/raw/master/exampleData/roomOccupancy.csv'\n",
+    "occupancy = pd.read_csv(url)\n",
+    "\n",
+    "occupancy['date'] = pd.to_datetime(occupancy['date'])\n",
+    "occupancy['day_of_week'] = occupancy['date'].dt.day_name()\n",
+    "occupancy['hour'] = occupancy['date'].dt.hour\n",
+    "occupancy['minute'] = occupancy['date'].dt.minute\n",
+    "\n",
+    "light_avg = occupancy['Light'].mean()\n",
+    "occupancy['bright'] = np.where(occupancy['Light'] > light_avg, 1, 0)\n",
+    "\n",
+    "'Temperature' are above their averages, and 0 otherwise.\n",
+    "humidity_avg = occupancy['Humidity'].mean()\n",
+    "temperature_avg = occupancy['Temperature'].mean()\n",
+    "occupancy['steamy'] = np.where((occupancy['Humidity'] > humidity_avg) & (occupancy['Temperature'] > temperature_avg), 1, 0)"
    ]
   }
  ],
