--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -4661,20 +4661,22 @@
     "#si-exercise\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "\n",
+    "# 1. Import the data into a DataFrame called occupancy.\n",
     "url = 'https://github.com/dustywhite7/pythonMikkeli/raw/master/exampleData/roomOccupancy.csv'\n",
     "occupancy = pd.read_csv(url)\n",
     "\n",
+    "# 2. Transform the 'date' column into 'day_of_week', 'hour', and 'minute' columns.\n",
     "occupancy['date'] = pd.to_datetime(occupancy['date'])\n",
     "occupancy['day_of_week'] = occupancy['date'].dt.day_name()\n",
     "occupancy['hour'] = occupancy['date'].dt.hour\n",
     "occupancy['minute'] = occupancy['date'].dt.minute\n",
     "\n",
-    "\n",
-    "\n",
+    "# 3. Create a column called bright that is 1 when 'Light' is above its average, and 0 otherwise.\n",
     "light_avg = occupancy['Light'].mean()\n",
     "occupancy['bright'] = np.where(occupancy['Light'] > light_avg, 1, 0)\n",
     "\n",
-    "'Temperature' are above their averages, and 0 otherwise.\n",
+    "# 4. Create a column called steamy that is 1 when both 'Humidity' nd 'Temperature' are above their averages, and 0 otherwise.\n",
     "humidity_avg = occupancy['Humidity'].mean()\n",
     "temperature_avg = occupancy['Temperature'].mean()\n",
     "occupancy['steamy'] = np.where((occupancy['Humidity'] > humidity_avg) & (occupancy['Temperature'] > temperature_avg), 1, 0)"
